--- a/src/layouts/footer.hbs
+++ b/src/layouts/footer.hbs
@@ -1,9 +1,5 @@
         <footer>
-          <ul>
-            <li>link</li>
-            <li>link</li>
-            <li>link</li>
-          </ul>
+          <p>footer</p>
         </footer>
     </body>
 </html>
