--- a/src/layouts/header.hbs
+++ b/src/layouts/header.hbs
@@ -1,17 +1,9 @@
-<html lang="en">
-<head>
-    <meta charset="utf-8" />
+  <head>
+    <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Best Website</title>
-    <meta name="HandheldFriendly" content="True" />
-    <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1.0, viewport-fit=cover"
-    />
-    <link rel="stylesheet" type="text/css" href="style.css" />
-</head>
-<body>
-
-<nav>
-    <h1>Navegation</h1>
-</nav>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon"type="imagen/x-icon"href="../img/informacion/logo.jpg"> 
+    <title>KiD-HELPED</title>
+    <link rel="stylesheet" href="{{style}}">
+  </head> 
+<body style="{{estilos}}">
