--- a/src/layouts/header.hbs
+++ b/src/layouts/header.hbs
@@ -5,5 +5,16 @@
     <link rel="shortcut icon"type="imagen/x-icon"href="../img/informacion/logo.jpg"> 
     <title>KiD-HELPED</title>
     <link rel="stylesheet" href="{{style}}">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap"
+      rel="stylesheet"
+    />
+     <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
   </head> 
 <body style="{{estilos}}">
