--- a/src/pages/auth/login.hbs
+++ b/src/pages/auth/login.hbs
@@ -9,7 +9,7 @@
             <!-- parte de olvidaste tu contraseña -->
             <div id="container__iniciar__session">
                 <h1>Inicia Sesión</h1>
-                <form id="form_container_id" action="../php/verificar.php" method="POST">
+                <form id="form_container_id" action="../auth/login.hbs" method="POST">
                     <div class="container_label">
                         <label class="label__iniciar__session" for="nickName">Nick name</label>
                     </div>
