--- a/src/pages/auth/register.hbs
+++ b/src/pages/auth/register.hbs
@@ -7,7 +7,7 @@
 
         <div id="container__registrarse">
           <h1>Registrate</h1>
-          <form action="../php/insertar.php" method="POST">
+          <form action="../auth/register.hbs" method="POST">
             <div>
               <div class="container_label">
                 <label class="label__registrarse" for="nombre">Nombres</label>
@@ -78,9 +78,7 @@
                 </div>
               </div>
             </div>
-            <!-- <div class="btnsRL">
-                        <button onclick="iniciar__session()" class="btn__Iniciar_Sessión">Iniciar session</button>
-                    </div> -->
+
           </form>
         </div>
       </div>
