--- a/src/pages/core/adulto.hbs
+++ b/src/pages/core/adulto.hbs
@@ -46,7 +46,7 @@
 
           <a
             target="blank"
-            href="/src/pages/core/adultos.hbs"
+            href="/adultos"
             class="btn btn-light topmargin-sm"
             >Empieza ahora<ion-icon name="arrow-forward-circle"></ion-icon
           ></a>
