--- a/src/pages/core/principal.hbs
+++ b/src/pages/core/principal.hbs
@@ -7,7 +7,7 @@
 			<h2 class="logo__name">KiD HELPED<span class="point">.</span> </h2>
 			</div>
 			<div class="links">
-				<a href="../Indexs/PAG WEB/PagOf.html" class="link">Seccion adultos mayores</a>
+				<a href="/adultos">Seccion adultos mayores</a>
 				<a href="#actividades" class="link">Actividades</a>
 				<a href="#Videos" class="link">Videos</a>
 				<a href="#testimonios" class="link link--active">Testimonios</a>
