--- a/src/pages/core/videos_adultos.hbs
+++ b/src/pages/core/videos_adultos.hbs
@@ -6,12 +6,8 @@
 			<h2 class="logo__name">KiD HELPED<span class="point">.</span> </h2>
 			</div>
 			<div class="links">
-				<a href="../Indexs/PAG WEB/PagOf.html" class="link">Seccion adultos mayores</a>
-				<a href="#actividades" class="link">Actividades</a>
+				<a href="/adulto">Seccion adultos mayores</a>
 				<a href="#Videos" class="link">Videos</a>
-				<a href="#testimonios" class="link link--active">Testimonios</a>
-				<!--<a href="#" class="link">clientes</a>
-				<a href="#" class="link link--active">Contacto</a><-->
 			</div>
 		</div>
 		</nav>
@@ -20,115 +16,94 @@
         <!-- Aqui empiza los videos tutoriales-->
 		<section class="project container " >
 			<h2 class="subtitle" id="videos ">Videos didacticos<span class="point">.</span></h2>
-				<p class="copy__section">Aqui encontraras videos con  diferentes actividades,mira y diviertete</p>
+				<p class="copy__section">Aqui encontraras videos con  diferentes actividades y recomendaciones</p>
 			<article class="container-bg">
 				<div class="card">
 						
 						<div id="Videos" class="cards__text">
-							<h3 class="card__title">Encuentra las diferencias<span class="point">.</span></h3>
-							<p class="card__date">Actividad para el deficit de atencion</p>
-							<p class="cards__copyy">Encontrar las diferencias es un excelente ejercicio para el refuerzo y desarrollo de las habilidades mentales</p>
-							<a  target="_blank" href="https://www.youtube.com/watch?v=irHvkLZ3Hws" class="card__button">Vamos al Video!!</a>
+							<h3 class="card__title">Cuidados para el adulto mayor<span class="point">.</span></h3>
+							<p class="card__date">Cuidado Adultos mayores</p>
+							<p class="cards__copyy">con los adultos mayores se tiene que tener algunos cuidados especiales y actividades que los ayuden aqui te lo contamos</p>
+							<a  target="_blank" href="https://www.youtube.com/watch?v=BOlG6cQWcBA" class="card__button">Vamos al Video!!</a>
                             <button class="card__button">editar</button>
                             <button class="card__button">eliminar</button>
 						</div>
 					 </div>
 					 <div class="background" class="">
-					 	<img src="./img/imagenes/diferencia3.jpg" class="background__img">
-					 	<!--<div class="background__text">
-					 		<h3 class="background__title">La educacion en linea</h3>
-					 		<p class="background__copy">La realidad aumentada transformarapor completo la educacion</p>
-					 	</div><-->
+					 	<img src="./img/imagenes/cuidado_adultos.jpg" class="background__img">
 					 </div>
 					 <div class="card" >
 						
 						<div class="cards__text">
-							<h3 class="card__title">Sopa de letras<span class="point">.</span></h3>
-							<p class="card__date">Actividad para la dislexia </p>
-							<p class="cards__copyy">Las sopas de letras son de vital importancia para el rendimiento escolar y diario del niño, ya que generan la habilidad para crear estrategias espontaneas</p>
-							<a target="_blank" href="https://youtu.be/7UCy3TGSN4U" class="card__button">Vamos al video!!</a>
+							<h3 class="card__title">cuidado y respeto del adulto mayor <span class="point">.</span></h3>
+							<p class="card__date">respeto adulto mayor </p>
+							<p class="cards__copyy">tanto el adulto mayor tiene que tener una cuidado y un respeto segun ya ley del ecuador aqui te lo contamos</p>
+							<a target="_blank" href="https://www.youtube.com/watch?v=nvDC1WciFaI" class="card__button">Vamos al video!!</a>
                             <button class="card__button">editar</button>
                             <button class="card__button">eliminar</button>
 						</div>
 					 </div>
 					 <div class="background">
-					 	<img src="./img/imagenes/sopa2.jpg" class="background__img">
-					 	<!--<div class="background__text">
-					 		<h3 class="background__title">La educacion en linea</h3>
-					 		<p class="background__copy">La realidad aumentada transformarapor completo la educacion</p>
-					 	</div><-->
+					 	<img src="./img/imagenes/respeto_adulto.jpg" class="background__img">
 					 </div>
 					 <div class="card">
 						
 						<div class="cards__text">
-							<h3 class="card__title">Suma y resta<span class="point">.</span></h3>
-							<p class="card__date">Actividades para aprender matematicas</p>
-							<p class="cards__copyy">Las matematicas son fundamentales para el desarrollo intelectual de los niños, les ayuda a ser logicos, a razonar ordenadamente y a tener una mente preparada para el pensamiento, la critica y la abstraccion</p>
-							<a target="_blank" href="https://www.youtube.com/watch?v=2Iy92z6WOqI" class="card__button">Vamos al video!!</a>
+							<h3 class="card__title">Actividades de estimulacion<span class="point">.</span></h3>
+							<p class="card__date">Actividades de Estimulacion congnitiva</p>
+							<p class="cards__copyy">La estimulacion es clave para disminuir el deterioro mental aqui lo puedes mirar</p>
+							<a target="_blank" href="https://www.youtube.com/watch?v=2YjX_xg-AEk" class="card__button">Vamos al video!!</a>
                             <button class="card__button">editar</button>
                             <button class="card__button">eliminar</button>
 						</div>
 					 </div>
 					 <div class="background" class="">
-					 	<img src="./img/imagenes/suma.jpg" class="background__img">
-					 	<!--<div class="background__text">
-					 		<h3 class="background__title">La educacion en linea</h3>
-					 		<p class="background__copy">La realidad aumentada transformarapor completo la educacion</p>
-					 	</div><-->
+					 	<img src="./img/imagenes/estimulacion_cognitiva.jpg" class="background__img">
 					 </div>
 					 <div class="card">
 						
 						<div class="cards__text">
-							<h3 class="card__title">Laberintos<span class="point">.</span></h3>
-							<p class="card__date">Actividades para la disgrafia </p>
-							<p class="cards__copyy">Con los laberintos se puede observar su percepcion espacial, su rapidez de aprendizaje, su capacidad para la toma de decisiones, su ejecutiva y habilidad, si se lo pasa bien con este tipo de actividades o no,etc</p>
-							<a target="_blank" href="https://www.youtube.com/watch?v=JsVHuff68VM" class="card__button">Vamos al video!!</a>
+							<h3 class="card__title">Actividades recreativas adultos mayores<span class="point">.</span></h3>
+							<p class="card__date">actividades recreativas  </p>
+							<p class="cards__copyy">las actividades de las que el adulto mayor puede hacer para poder mantener si agilidad mental</p>
+							<a target="_blank" href="https://www.youtube.com/watch?v=ZqQr4684rJM" class="card__button">Vamos al video!!</a>
                             <button class="card__button">editar</button>
                             <button class="card__button">eliminar</button>
 						</div>
 					 </div>
 					 <div class="background" class="">
-					 	<img src="./img/imagenes/laberinto2.jpg" class="background__img">
-					 	<!--<div class="background__text">
-					 		<h3 class="background__title">La educacion en linea</h3>
-					 		<p class="background__copy">La realidad aumentada transformarapor completo la educacion</p>
-					 	</div><-->
+					 	<img src="./img/imagenes/dinamicas_adultos.jpg" class="background__img">
 					 </div>
 
 					 <div class="card">
 						
 						<div class="cards__text">
-							<h3 class="card__title">Memoria<span class="point">.</span></h3>
-							<p class="card__date">Actividades Memorama </p>
-							<p class="cards__copyy">Los juegos de memoria son muy factibles ya que entrenan la memoria visual,potencian las habilidades cognitivas,mejora la concentracion,aumenta la memoria a corto plazo,etc.</p>
-							<a target="_blank" href="https://www.youtube.com/watch?v=9__168bBW_c" class="card__button">Vamos al video!!</a>
+							<h3 class="card__title">Memoria y ejercitar el cerebro<span class="point">.</span></h3>
+							<p class="card__date">memoria y agilidad cerebral</p>
+							<p class="cards__copyy">la memoria es muy importante para los adultos mayores con lo que a cada persona tendria que hacer algunos ejercicios para que no pierda esta agilidad aqui te lo informamos</p>
+							<a target="_blank" href="https://www.youtube.com/watch?v=0I_E8Zb1Uc0" class="card__button">Vamos al video!!</a>
                             <button class="card__button">editar</button>
                             <button class="card__button">eliminar</button>
 						</div>
 					 </div>
 					 <div class="background" class="">
-					 	<img src="./img/imagenes/memoria2.jpg" class="background__img">
+					 	<img src="./img/imagenes/agilidad_mental.jpg" class="background__img">
 					 	<div class="background__text">
-					 		<!--<h3 class="background__title">La educacion en linea</h3>
-					 		<p class="background__copy">La realidad aumentada transformarapor completo la educacion</p>
-					 	</div><-->
 					 </div>
 					 </div>
 					 <div class="card">
 						
 						<div class="cards__text">
-							<h3 class="card__title">Escucha<span class="point">.</span></h3>
-							<p class="card__date">Actividades para la discapacidad intelectual</p>
-							<p class="cards__copyy">Esta actividad de oir y adivinar el nombre del animal que lo produce es una gran actividad para niños con problemas intelectuales ya que nos solo refuerza la capacidad auditiva sino que tmabien la parte visual y la memoria</p>
-							<a target="_blank" href="https://www.youtube.com/watch?v=p6uzxgPmKy4" class="card__button">Vamos al video!!</a>
+							<h3 class="card__title">Consejos para cuidar de adultos mayores <span class="point">.</span></h3>
+							<p class="card__date">consejos para el cuidado de adultos mayores</p>
+							<p class="cards__copyy">aunque la mayoria entiendo lo que dicen los adultos mayores casi nunca esta bien aqui te proporcionamos algunos consejos</p>
+							<a target="_blank" href="https://www.youtube.com/watch?v=yTD6U-y976E" class="card__button">Vamos al video!!</a>
                             <button class="card__button">editar</button>
                             <button class="card__button">eliminar</button>
 						</div>
 					 </div>
 					 <div class="background" class="">
-					 	<img src="./img/imagenes/escucha3.jpg" class="background__img">
-
-
+					 	<img src="./img/imagenes/ayuda_adultos.jpg" class="background__img">
 			</article>
 		</section>
     </main>
